map users filter finished apart from general function bug and horizontal scroll solution

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -97,18 +97,35 @@ $blue_pastel: #98cdff;
 
 #map_index_users_subnav{
 
+  height: 40px;
+  padding-right: 20px;
+
   text-align:center;
 
+  // overflow-x:hidden;
+
   .btn-toolbar {
-    margin-top:6px;
+    margin-top:8px;
+    margin-bottom:3px;
   }
 
-  height: 40px;
-  padding-left: 20px;
-  padding-right: 20px;
+  .map_index_users_form_pulldown {
+    text-align:left;
+    margin-left:3px;
+    margin-right:3px;
+  }
 
 }
 
+#map_index_users_subnav_filter {
+  color:white;
+  // background: rgba(0, 0, 0, 0.6);
+  // line-height:38px;
+  // height:40px;
+  width:70px;
+  font-weight:bold;
+  font-size:12px;
+}
 
 
 .map_index_subnav {
